--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "@fullcalendar/interaction": "^6.1.15",
         "@fullcalendar/timegrid": "^6.1.15",
         "@fullcalendar/vue3": "^6.1.15",
-        "@headlessui/vue": "^1.7.3",
+        "@headlessui/vue": "^1.7.23",
+        "@heroicons/vue": "^2.2.0",
         "@suadelabs/vue3-multiselect": "^1.0.2",
         "@tabler/icons-vue": "^3.35.0",
         "@vuelidate/core": "^2.0.0",
@@ -25,6 +26,7 @@
         "easymde": "^2.18.0",
         "file-upload-with-preview": "^4.2.0",
         "highlight.js": "^11.3.1",
+        "lodash": "^4.17.21",
         "lodash-es": "^4.17.21",
         "maska": "^3.0.0",
         "path": "^0.12.7",
@@ -57,6 +59,7 @@
         "@rollup/plugin-alias": "^5.1.0",
         "@tailwindcss/forms": "^0.5.7",
         "@tailwindcss/typography": "^0.5.14",
+        "@types/lodash": "^4.17.23",
         "@vitejs/plugin-vue": "^5.1.2",
         "autoprefixer": "^10.4.17",
         "laravel-vite-plugin": "^1.0.5",
