--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.9",
+        "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.9",
         "tymon/jwt-auth": "^2.0"
     },
