--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "highlight.js": "^11.3.1",
         "lodash": "^4.17.21",
         "lodash-es": "^4.17.21",
-        "maska": "^3.0.0",
+        "maska": "^3.2.0",
         "path": "^0.12.7",
         "pinia": "^2.0.22",
         "sweetalert2": "^11.23.0",
@@ -45,6 +45,7 @@
         "vue-i18n": "^9.2.2",
         "vue-router": "^4.1.5",
         "vue-simple-range-slider": "^1.0.0",
+        "vue-toastification": "^2.0.0-rc.5",
         "vue3-apexcharts": "^1.4.1",
         "vue3-easymde": "^1.0.0",
         "vue3-form-wizard": "^0.2.4",
@@ -52,7 +53,8 @@
         "vue3-number-spinner": "^0.0.9",
         "vue3-perfect-scrollbar": "^2.0.0",
         "vue3-popper": "^1.5.0",
-        "vue3-quill": "^0.3.1"
+        "vue3-quill": "^0.3.1",
+        "vuedraggable": "^4.1.0"
     },
     "devDependencies": {
         "@intlify/unplugin-vue-i18n": "^4.0.0",
