--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "@tailwindcss/forms": "^0.5.7",
         "@tailwindcss/typography": "^0.5.14",
         "@types/lodash": "^4.17.23",
+        "@types/lodash-es": "^4.17.12",
         "@vitejs/plugin-vue": "^5.1.2",
         "autoprefixer": "^10.4.17",
         "laravel-vite-plugin": "^1.0.5",
